--- a/views/index.slim
+++ b/views/index.slim
@@ -1,5 +1,3 @@
-h1 ChartRoom
-
 h3 Running Containers
 
 table.table.table-striped.table-bordered
@@ -9,6 +7,7 @@ table.table.table-striped.table-bordered
       th Name
       th Image
       th Command
+      th Links
       th Status
   tbody
     - Docker::Container.all.each do |container|
@@ -17,4 +16,5 @@ table.table.table-striped.table-bordered
         td = container.info["Names"].join(", ")
         td = container.info["Image"]
         td = container.info["Command"]
+        td = container.json["HostConfig"]["Links"] ? container.json["HostConfig"]["Links"].join("\n") : ""
         td = container.info["Status"]
