--- a/views/layout.slim
+++ b/views/layout.slim
@@ -6,6 +6,22 @@ html
     title ChartRoom
     link href="#{stylesheet_path 'all'}" rel="stylesheet"
   body
+    nav.navbar.navbar-inverse role="navigation"
+      .container-fluid
+        .navbar-header
+          button.navbar-toggle.collapsed type-"button" data-toggle="collapse" data-target="bs-example-navbar-collapse-1"
+            span.sr-only Toggle Navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand href="/" ChartRoom
+        .collapse.navbar-collapse#bs-example-navbar-collapse-1
+          ul.nav.navbar-nav
+            li
+              a href="/images" Images
+            li
+              a href="/containers" Containers
+
     .container
       == yield
     script src="#{javascript_path 'all'}"
