--- a/app/views/images.slim
+++ b/app/views/images.slim
@@ -1,6 +1,6 @@
 h3 Images
 
-table.table.table-striped.table-bordered
+table.table.table-bordered
   thead
     tr
       th ID
@@ -9,10 +9,10 @@ table.table.table-striped.table-bordered
       th Created at
       th Parent ID
   tbody
-    - Docker::Image.all.each do |image|
-      tr
-        td = image.info["id"][0..7]
-        td = image.info["RepoTags"].join(", ")
-        td = sprintf("%.1f MB", image.info["VirtualSize"].to_f / 1024 / 1024)
-        td = Time.at(image.info["Created"])
-        td = image.info["ParentId"][0..7]
+    - @images.each do |image|
+      tr class="#{image.row_class}"
+        td = image.id[0..7]
+        td = image.repo_tags.join(", ")
+        td = sprintf("%.1f MB", image.virtual_size.to_f / 1024 / 1024)
+        td = Time.at(image.created_at)
+        td = image.parent_id[0..7]
