--- a/app/views/images.slim
+++ b/app/views/images.slim
@@ -2,7 +2,7 @@ h3 Images
 
 #imagesDiagramContainer
 
-table.table.table-bordered
+table.table.table-bordered.table-striped
   thead
     tr
       th ID
@@ -12,13 +12,10 @@ table.table.table-bordered
       th Parent ID
   tbody
     - @images.each do |image|
-      tr class="#{image.row_class}"
+      tr
         td = image.id[0..7]
         td
-          - if image.tagged?
-            strong = image.repo_tags.join(", ")
-          - else
-            = image.repo_tags.join(", ")
+          strong = image.repo_tags.join(", ")
         td = sprintf("%.1f MB", image.virtual_size.to_f / 1024 / 1024)
-        td = Time.at(image.created_at)
+        td = Time.at(image.created_at).strftime("%Y-%m-%d %H:%M:%S")
         td = image.parent_id[0..7]
