--- a/app/views/index.slim
+++ b/app/views/index.slim
@@ -1,1 +1,15 @@
-
+.row
+  .col-md-6
+    .panel.panel-default
+      .panel-heading
+        strong Images
+      .panel-body
+        = 2
+  .col-md-6
+    .panel.panel-default
+      .panel-heading
+        strong Running Containers
+      .panel-body
+        = 2
+        .pull-right
+          button.btn.btn-primary View Running Containers
