Fix diagram format

--- a/app/assets/stylesheets/all.sass
+++ b/app/assets/stylesheets/all.sass
@@ -1,1 +1,11 @@
 @import "bootstrap-css"
+
+#imagesDiagramContainer
+  border: 1px solid
+  border-radius: 10px
+  margin: 10px 10px
+
+#containersDiagramContainer
+  border: 1px solid
+  border-radius: 10px
+  margin: 10px 10px
