--- a/app/views/containers.slim
+++ b/app/views/containers.slim
@@ -1,8 +1,8 @@
-h3 Running Containers
+h3 Containers
 
 #containersDiagramContainer
 
-table.table.table-bordered.table-striped
+table.table.table-bordered.table-striped#containersList
   thead
     tr
       th ID
@@ -11,17 +11,14 @@ table.table.table-bordered.table-striped
       th Command
       th Links
       th Status
-      th
   tbody
     - @containers.each do |container|
-      tr
+      tr id="#{container.id}"
         td = container.id[0..11]
         td
-          strong = container.names.join(", ")
+          strong = container.name
         td = container.image
         td
           code = container.command
         td = container.links.join(", ")
         td = container.status
-        td
-          button.btn.btn-danger Stop
