--- a/app/views/images.slim
+++ b/app/views/images.slim
@@ -2,7 +2,7 @@ h3 Images
 
 #imagesDiagramContainer
 
-table.table.table-bordered.table-striped
+table.table.table-bordered.table-striped#imagesList
   thead
     tr
       th ID
@@ -12,7 +12,7 @@ table.table.table-bordered.table-striped
       th Parent ID
   tbody
     - @images.each do |image|
-      tr
+      tr id="#{image.id}"
         td = image.id[0..11]
         td
           strong = image.repo_tags.join(", ")
