--- a/app/views/containers.slim
+++ b/app/views/containers.slim
@@ -1,30 +1,35 @@
 h2 Containers
 
-#containersDiagramContainer
+- if @containers.empty?
+  .text-center
+    .well
+      strong No running container
+- else
+  #containersDiagramContainer
 
-table.table.table-bordered.table-striped#containersList
-  thead
-    tr
-      th ID
-      th Name
-      th Image
-      th Command
-      th Links
-      th Status
-      th
-  tbody
-    - @containers.each do |container|
-      tr id="#{container.id}"
-        td.col-md-1 = container.short_id
-        td
-          strong = container.name
-        td = container.image
-        td
-          code = container.command
-        td = container.links.join(", ")
-        td = container.status
-        td
-          .text-center
-            button.btn.btn-danger
-              span.glyphicon.glyphicon-stop
-              |  Stop
+  table.table.table-bordered.table-striped#containersList
+    thead
+      tr
+        th ID
+        th Name
+        th Image
+        th Command
+        th Links
+        th Status
+        th
+    tbody
+      - @containers.each do |container|
+        tr id="#{container.id}"
+          td.col-md-1 = container.short_id
+          td
+            strong = container.name
+          td = container.image
+          td
+            code = container.command
+          td = container.links.join(", ")
+          td = container.status
+          td
+            .text-center
+              button.btn.btn-danger
+                span.glyphicon.glyphicon-stop
+                |  Stop
