Show image tree with d3.js

--- a/app/views/images.slim
+++ b/app/views/images.slim
@@ -5,7 +5,7 @@ h2 Images
     .well
       strong No image
 -else
-  #imagesDiagramContainer
+  #imageDiagram
 
   table.table.table-bordered.table-striped#imagesList
     thead
